# shape_registration

./: README.md
contrib/cpd/: CMakeLists.txt  package.xml
contrib/cpd/source/: CMakeLists.txt
contrib/cpd/source/components/jsoncpp/include/cpd/: jsoncpp.hpp
contrib/cpd/source/components/jsoncpp/src/: jsoncpp.cpp
contrib/cpd/source/include/cpd/: affine.hpp  gauss_transform.hpp  gauss_transform_fgt.hpp  matrix.hpp  nonrigid.hpp  normalization.hpp  rigid.hpp  transform.hpp  utils.hpp  version.hpp
contrib/cpd/source/src/: affine.cpp  gauss_transform.cpp  gauss_transform_fgt.cpp  gauss_transform_make_default.cpp  matrix.cpp  nonrigid.cpp  normalization.cpp  rigid.cpp  transform.cpp  utils.cpp
contrib/fgt/: CMakeLists.txt  package.xml
contrib/fgt/source/: CMakeLists.txt
shape_registration/: CMakeLists.txt  package.xml
shape_registration/datasets/Drills/pcd/: drill_1.pcd  drill_10.pcd  drill_11.pcd  drill_2.pcd  drill_3.pcd  drill_4.pcd  drill_5.pcd  drill_6.pcd  drill_7.pcd  drill_8.pcd  drill_9.pcd  drill_test_1.pcd  drill_test_2.pcd  drill_test_3.pcd
shape_registration/include/shape_registration/: cloud_manager.hpp  cpd.hpp  gui.hpp  mesh_manager.hpp  pca.hpp  pclviewer.h  shape_registration.hpp  shape_utils.hpp  solver.hpp  solver_thread.hpp
shape_registration/launch/: gui.launch  shape_registration.launch
shape_registration/src/: cloud_manager.cpp  cpd.cpp  gui.cpp  main.cpp  main_gui.cpp  mesh_manager.cpp  pca.cpp  pclviewer.cpp  shape_registration.cpp  shape_utils.cpp  solver.cpp  solver_thread.cpp
shape_registration/ui/: surface_gui.ui
