<?xml version="1.0"?>
<package format="2">
  <name>shape_registration</name>
  <version>0.0.0</version>
  <description>The Shape Registration package</description>

  <maintainer email="rodriguez@ais.uni-bonn.de">Diego Rodriguez</maintainer>
  <maintainer email="s6flhube@uni-bonn.de">Florian Huber</maintainer>

  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>cpd</depend>
  <depend>sensor_msgs</depend>
  
</package>
